--- a/desafio1/styles/card.css
+++ b/desafio1/styles/card.css
@@ -10,9 +10,10 @@
     flex-direction: row;
     width: 70%;
     height: 250px;
-    box-shadow: 9px 9px 27px 0px #000000;
-    -webkit-box-shadow: 9px 9px 27px 0px #000000;
-    -moz-box-shadow: 9px 9px 27px 0px #000000;
+    -webkit-box-shadow: 0px 0px 50px -2px #000000bf;
+    -moz-box-shadow: 0px 0px 50px -2px #000000bf;
+    box-shadow: 0px 0px 50px -2px #000000bf;
+    border-radius: 1rem;
     justify-content: space-between;
     margin: 100px auto;
 }
